[package]
name = "heed"
version = "0.1.0"
edition = "2021"

[dependencies]
# Type erasure for async trait methods 
async-trait = "0.1.52"

# Ethereum
web3 = "0.17.0"

# Solana
solana-client = "1.9.2"
solana-sdk = "1.9.2"

[dev-dependencies]
# A small and fast async runtime
smol = "1.2.5"

#  Compatibility adapter between tokio and futures 
async-compat = "0.2.1"
